@@ -15,6 +15,7 @@
 package com.liferay.gradle.plugins.service.builder;
 
 import com.liferay.gradle.util.FileUtil;
+import com.liferay.gradle.util.GUtil;
 import com.liferay.gradle.util.GradleUtil;
 import com.liferay.gradle.util.Validator;
 import com.liferay.portal.tools.service.builder.ServiceBuilderArgs;
@@ -30,17 +31,21 @@ import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
 
+import org.gradle.api.JavaVersion;
 import org.gradle.api.Project;
+import org.gradle.api.tasks.CacheableTask;
 import org.gradle.api.tasks.Input;
 import org.gradle.api.tasks.InputFile;
 import org.gradle.api.tasks.JavaExec;
 import org.gradle.api.tasks.Optional;
+import org.gradle.api.tasks.PathSensitive;
+import org.gradle.api.tasks.PathSensitivity;
 import org.gradle.util.CollectionUtils;
-import org.gradle.util.GUtil;
 
 /**
  * @author Andrea Di Giorgi
  */
+@CacheableTask
 public class BuildServiceTask extends JavaExec {
 
 	public BuildServiceTask() {
@@ -61,6 +66,7 @@ public class BuildServiceTask extends JavaExec {
 	}
 
 	@Input
+	@PathSensitive(PathSensitivity.RELATIVE)
 	public File getApiDir() {
 		return GradleUtil.toFile(getProject(), _apiDir);
 	}
@@ -81,18 +87,40 @@ public class BuildServiceTask extends JavaExec {
 	}
 
 	@Input
+	@PathSensitive(PathSensitivity.RELATIVE)
 	public File getHbmFile() {
 		return GradleUtil.toFile(getProject(), _hbmFile);
 	}
 
 	@Input
+	@PathSensitive(PathSensitivity.RELATIVE)
 	public File getImplDir() {
 		return GradleUtil.toFile(getProject(), _implDir);
 	}
 
+	@Input
+	@Optional
+	public Set<String> getIncubationFeatures() {
+		return _incubationFeatures;
+	}
+
 	@InputFile
+	@PathSensitive(PathSensitivity.RELATIVE)
 	public File getInputFile() {
 		return GradleUtil.toFile(getProject(), _inputFile);
+	}
+
+	@Override
+	public List<String> getJvmArgs() {
+		List<String> jvmArgs = new ArrayList<>();
+
+		JavaVersion javaVersion = getJavaVersion();
+
+		if (javaVersion.isJava9Compatible()) {
+			jvmArgs.add("--illegal-access=permit");
+		}
+
+		return jvmArgs;
 	}
 
 	@Input
@@ -101,6 +129,7 @@ public class BuildServiceTask extends JavaExec {
 	}
 
 	@Input
+	@PathSensitive(PathSensitivity.RELATIVE)
 	public File getModelHintsFile() {
 		return GradleUtil.toFile(getProject(), _modelHintsFile);
 	}
@@ -126,11 +155,13 @@ public class BuildServiceTask extends JavaExec {
 	}
 
 	@Input
+	@PathSensitive(PathSensitivity.RELATIVE)
 	public File getResourcesDir() {
 		return GradleUtil.toFile(getProject(), _resourcesDir);
 	}
 
 	@Input
+	@PathSensitive(PathSensitivity.RELATIVE)
 	public File getSpringFile() {
 		return GradleUtil.toFile(getProject(), _springFile);
 	}
@@ -141,6 +172,7 @@ public class BuildServiceTask extends JavaExec {
 	}
 
 	@Input
+	@PathSensitive(PathSensitivity.RELATIVE)
 	public File getSqlDir() {
 		return GradleUtil.toFile(getProject(), _sqlDir);
 	}
@@ -168,20 +200,35 @@ public class BuildServiceTask extends JavaExec {
 
 	@Input
 	@Optional
+	@PathSensitive(PathSensitivity.RELATIVE)
 	public File getTestDir() {
 		return GradleUtil.toFile(getProject(), _testDir);
 	}
 
 	@Input
 	@Optional
+	@PathSensitive(PathSensitivity.RELATIVE)
 	public File getUADDir() {
 		return GradleUtil.toFile(getProject(), _uadDir);
 	}
 
 	@Input
 	@Optional
+	@PathSensitive(PathSensitivity.RELATIVE)
 	public File getUADTestIntegrationDir() {
 		return GradleUtil.toFile(getProject(), _uadTestIntegrationDir);
+	}
+
+	public BuildServiceTask incubationFeatures(
+		Iterable<String> incubationFeatures) {
+
+		GUtil.addToCollection(_incubationFeatures, incubationFeatures);
+
+		return this;
+	}
+
+	public BuildServiceTask incubationFeatures(String... incubationFeatures) {
+		return incubationFeatures(Arrays.asList(incubationFeatures));
 	}
 
 	@Input
@@ -278,6 +325,16 @@ public class BuildServiceTask extends JavaExec {
 
 	public void setImplDir(Object implDir) {
 		_implDir = implDir;
+	}
+
+	public void setIncubationFeatures(Iterable<String> incubationFeatures) {
+		_incubationFeatures.clear();
+
+		incubationFeatures(incubationFeatures);
+	}
+
+	public void setIncubationFeatures(String... incubationFeatures) {
+		setIncubationFeatures(Arrays.asList(incubationFeatures));
 	}
 
 	public void setInputFile(Object inputFile) {
@@ -409,6 +466,9 @@ public class BuildServiceTask extends JavaExec {
 			"service.database.name.max.length=" + getDatabaseNameMaxLength());
 		args.add("service.hbm.file=" + _relativize(getHbmFile()));
 		args.add("service.impl.dir=" + _relativize(getImplDir()));
+		args.add(
+			"service.incubation.features=" +
+				CollectionUtils.join(",", getIncubationFeatures()));
 		args.add("service.input.file=" + _relativize(getInputFile()));
 		args.add(
 			"service.model.hints.configs=" +
@@ -510,6 +570,7 @@ public class BuildServiceTask extends JavaExec {
 	private int _databaseNameMaxLength = 30;
 	private Object _hbmFile;
 	private Object _implDir;
+	private final Set<String> _incubationFeatures = new HashSet<>();
 	private Object _inputFile;
 	private final Set<Object> _modelHintsConfigs = new LinkedHashSet<>();
 	private Object _modelHintsFile;
